AN-6029/consolidate-token-metadata-table (#458)
* add token metadata/legit score model

* add blockchain score summary dim

* add comments

* update to boolean

* add other chains

* add chains

* tweaks

* threshold tweaks

---------

Co-authored-by: Eric Laurello <eric.laurello@flipsidecrypto.com>
Co-authored-by: eric-laurello <102970824+eric-laurello@users.noreply.github.com>

--- a/models/sources.yml
+++ b/models/sources.yml
@@ -1301,6 +1301,7 @@ sources:
     schema: core
     tables:
       - name: dim_assets
+      - name: fact_operations
       - name: fact_transactions
 
   - name: stellar_stats
@@ -1366,5 +1367,6 @@ sources:
     database: ton
     schema: core
     tables:
+      - name: fact_jetton_events
       - name: fact_jetton_metadata
       - name: fact_transactions
