gold, is_verified, more cleanup

--- a/models/gold/price/price__ez_asset_metadata.yml
+++ b/models/gold/price/price__ez_asset_metadata.yml
@@ -20,6 +20,8 @@ models:
         description: '{{ doc("prices_is_native") }}'
       - name: IS_DEPRECATED
         description: '{{ doc("prices_is_deprecated") }}'
+      - name: IS_VERIFIED
+        description: '{{ doc("prices_is_verified") }}'
       - name: EZ_ASSET_METADATA_ID
         description: '{{ doc("pk") }}'   
       - name: INSERTED_TIMESTAMP
