--- a/models/gold/price/price__ez_prices_hourly.yml
+++ b/models/gold/price/price__ez_prices_hourly.yml
@@ -22,6 +22,8 @@ models:
         description: '{{ doc("prices_is_imputed") }}'
       - name: IS_DEPRECATED
         description: '{{ doc("prices_is_deprecated") }}'
+      - name: IS_VERIFIED
+        description: '{{ doc("prices_is_verified") }}'
       - name: EZ_PRICES_HOURLY_ID
         description: '{{ doc("pk") }}'   
       - name: INSERTED_TIMESTAMP
