--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -23,6 +23,9 @@ clean-targets: # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+tests:
+  +store_failures: true # all tests
+
 on-run-start:
   - "{{ create_sps() }}"
   - '{{ create_udfs() }}'
