--- a/models/gold/defi/defi__ez_bridge_activity.yml
+++ b/models/gold/defi/defi__ez_bridge_activity.yml
@@ -36,6 +36,8 @@ models:
         description: '{{ doc("bridge_amount") }}'  
       - name: AMOUNT_USD
         description: '{{ doc("bridge_amount_usd") }}'  
+      - name: TOKEN_IS_VERIFIED
+        description: '{{ doc("prices_is_verified") }}'  
       - name: EZ_BRIDGE_ACTIVITY_ID
         description: '{{ doc("pk") }}'   
       - name: INSERTED_TIMESTAMP
