--- a/models/sources.yml
+++ b/models/sources.yml
@@ -515,6 +515,12 @@ sources:
       - name: dim_contracts
       - name: fact_transactions      
       - name: ez_token_transfers
+  
+  - name: core_defi
+    database: core
+    schema: defi
+    tables:
+      - name: ez_bridge_activity
 
   - name: core_silver
     database: core
@@ -876,6 +882,12 @@ sources:
       - name: dim_contracts
       - name: fact_transactions
       - name: ez_token_transfers
+  - name: ink_defi
+    database: ink
+    schema: defi
+    tables:
+      - name: ez_bridge_activity
+
   - name: ink_silver
     database: ink
     schema: silver
