--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ dbt_modules/
 # newer versions of dbt use this directory instead of dbt_modules for test dependencies
 dbt_packages/
 logs/
-
+package-lock.yml
 .user.yml
 
 .venv/
