--- a/models/silver/prices/onchain/silver__onchain_osmosis_prices.yml
+++ b/models/silver/prices/onchain/silver__onchain_osmosis_prices.yml
@@ -16,9 +16,9 @@ models:
         description: opening hour of price data
         tests:
           - not_null
-          - dbt_expectations.expect_row_values_to_have_recent_data:
-              datepart: day
-              interval: 1
+          # - dbt_expectations.expect_row_values_to_have_recent_data:
+          #     datepart: day
+          #     interval: 1
       - name: OPEN
         description: open price of asset for hour
         tests:
