--- a/models/sources.yml
+++ b/models/sources.yml
@@ -742,6 +742,7 @@ sources:
       - name: fact_dex_volume
       - name: fact_bridge_volume_by_chain
       - name: dim_protocols
+      - name: fact_chain_tvl
     
   - name: external_tokenlists
     database: external
