--- a/.github/workflows/slack_protocol_alert.yml
+++ b/.github/workflows/slack_protocol_alert.yml
@@ -9,6 +9,17 @@ jobs:
   notify-protocols:
     runs-on: ubuntu-latest
     environment: workflow_prod
+    env:
+      DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
+      DBT_VERSION: "${{ vars.DBT_VERSION }}"
+      ACCOUNT: "${{ vars.ACCOUNT }}"
+      ROLE: "${{ vars.ROLE }}"
+      USER: "${{ vars.USER }}"
+      PASSWORD: "${{ secrets.PASSWORD }}"
+      REGION: "${{ vars.REGION }}"
+      DATABASE: "${{ vars.DATABASE }}"
+      WAREHOUSE: "${{ vars.WAREHOUSE }}"
+      SCHEMA: "${{ vars.SCHEMA }}"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -17,18 +28,15 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+          cache: "pip"
           
       - name: Install dependencies
         run: |
-          pip install requests
-          pip install dbt-core dbt-snowflake
-          
-      - name: Extract failed protocols
-        run: |
-          dbt run-operation get_high_volume_protocols > failed_protocols.json
+          pip install -r requirements.txt
+          dbt deps
           
       - name: Send protocol alert
         run: |
-          python macros/python/slack_protocol_alert.py failed_protocols.json
+          python macros/python/slack_protocol_alert.py
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
