--- a/models/gold/defi/defi__dim_dex_liquidity_pools.yml
+++ b/models/gold/defi/defi__dim_dex_liquidity_pools.yml
@@ -7,7 +7,11 @@ models:
       - name: BLOCKCHAIN
         description: Blockchain, Network, or Platform the token price is recorded on.
       - name: PLATFORM
-        description: The protocol or platform that the liquidity pool belongs to or swap occurred on.
+        description: The name of the platform that the liquidity pool belongs to or swap occurred on, typically a concatenation of the protocol and version.
+      - name: PROTOCOL
+        description: The name of the protocol.
+      - name: PROTOCOL_VERSION
+        description: The version of the protocol.
       - name: CREATION_BLOCK
         description: The block number of when this pool was created.          
       - name: CREATION_TIME
