--- a/models/silver/defi/silver__complete_bridge_activity.yml
+++ b/models/silver/defi/silver__complete_bridge_activity.yml
@@ -13,6 +13,12 @@ models:
       - name: PLATFORM
         tests:
           - dbt_expectations.expect_column_to_exist
+      - name: PROTOCOL
+        tests:
+          - dbt_expectations.expect_column_to_exist
+      - name: PROTOCOL_VERSION
+        tests:
+          - dbt_expectations.expect_column_to_exist
       - name: BLOCK_NUMBER
         tests:
           - dbt_expectations.expect_column_to_exist 
