--- a/models/sources.yml
+++ b/models/sources.yml
@@ -1342,6 +1342,15 @@ sources:
     tables:
       - name: ez_core_metrics_hourly
 
+   #=============================================================================
+  # SUI
+  #=============================================================================
+  - name: sui_core
+    database: sui
+    schema: core
+    tables:
+      - name: dim_tokens
+
   #=============================================================================
   # SWELL
   #=============================================================================
