--- a/.github/workflows/slack_protocol_alert.yml
+++ b/.github/workflows/slack_protocol_alert.yml
@@ -40,3 +40,13 @@ jobs:
           python macros/python/slack_protocol_alert.py
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          DBT_PROFILES_DIR: "${{ vars.DBT_PROFILES_DIR }}"
+          DBT_VERSION: "${{ vars.DBT_VERSION }}"
+          ACCOUNT: "${{ vars.ACCOUNT }}"
+          ROLE: "${{ vars.ROLE }}"
+          USER: "${{ vars.USER }}"
+          PASSWORD: "${{ secrets.PASSWORD }}"
+          REGION: "${{ vars.REGION }}"
+          DATABASE: "${{ vars.DATABASE }}"
+          WAREHOUSE: "${{ vars.WAREHOUSE }}"
+          SCHEMA: "${{ vars.SCHEMA }}"
