--- a/.github/workflows/slack_protocol_alert.yml
+++ b/.github/workflows/slack_protocol_alert.yml
@@ -4,6 +4,8 @@ on:
     secrets:
       SLACK_WEBHOOK_URL:
         required: true
+      PASSWORD:
+        required: true
 
 jobs:
   notify-protocols:
