--- a/.github/workflows/dbt_run_scheduled_hourly.yml
+++ b/.github/workflows/dbt_run_scheduled_hourly.yml
@@ -42,7 +42,7 @@ jobs:
           dbt deps
       - name: Run DBT Jobs
         run: |
-          dbt run -m "crosschain_models,tag:hourly"
+          dbt run -m "crosschain_models,tag:hourly" --exclude models/silver/defi/silver__complete_bridge_activity.sql models/silver/defi/silver__complete_dex_swaps.sql
 
   notify-failure:
     needs: [run_dbt_jobs]
