--- a/.github/workflows/dbt_run_scheduled_hourly.yml
+++ b/.github/workflows/dbt_run_scheduled_hourly.yml
@@ -16,7 +16,7 @@ env:
   PASSWORD: "${{ secrets.PASSWORD }}"
   REGION: "${{ vars.REGION }}"
   DATABASE: "${{ vars.DATABASE }}"
-  WAREHOUSE: "${{ vars.WAREHOUSE }}"
+  WAREHOUSE: "DBT_EMERGENCY"
   SCHEMA: "${{ vars.SCHEMA }}"
 
 concurrency:
