--- a/models/sources.yml
+++ b/models/sources.yml
@@ -601,6 +601,7 @@ sources:
     schema: onchain_scores
     tables:
       - name: all_scores
+      - name: protocol_metrics
 
   #=============================================================================
   # ECLIPSE
