--- a/models/sources.yml
+++ b/models/sources.yml
@@ -453,6 +453,7 @@ sources:
       - name: asset_metadata_coin_gecko_api_v2
       - name: asset_metadata_coin_market_cap_api_v2
       - name: asset_ohlc_coin_market_cap_api_v2
+      - name: market_data_coin_gecko_api
       - name: unifai_swap_txs
       - name: unifai_purchase_txs
 
