--- a/models/sources.yml
+++ b/models/sources.yml
@@ -1285,6 +1285,7 @@ sources:
       - name: fact_transfers
       - name: dim_tokens
       - name: ez_transfers
+      - name: fact_events
 
   - name: solana_defi
     database: solana
