--- a/models/sources.yml
+++ b/models/sources.yml
@@ -1263,6 +1263,7 @@ sources:
       - name: fact_transfers
       - name: dim_tokens
       - name: ez_transfers
+      - name: fact_events
 
   - name: solana_defi
     database: solana
