fix ac stats and docs

--- a/.github/workflows/dbt_docs_update.yml
+++ b/.github/workflows/dbt_docs_update.yml
@@ -45,7 +45,9 @@ jobs:
           git checkout -b docs origin/main
           
       - name: generate dbt docs
-        run: dbt docs generate -t prod
+        run: |
+          dbt ls -t prod
+          dbt docs generate --no-compile -t prod
 
       - name: move files to docs directory
         run: |
